# eventbridge-pipes-events-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: error.rs  kinesis.rs  lib.rs
