[package]
name = "eventbridge-pipes-events"
version = "0.1.0"
edition = "2021"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
license = "MIT"
description = "AWS Eventbridge Pipes Type library."
repository = "https://github.com/aoyagikouhei/eventbridge-pipes-events"
keywords = ["eventbridge", "pipes", "type"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/eventbridge-pipes"

[dependencies]
aws_lambda_events = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"